--- a/Creou.OnlyRunOnce.Tests/Creou.OnlyRunOnce.Tests.csproj
+++ b/Creou.OnlyRunOnce.Tests/Creou.OnlyRunOnce.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ConcurrentRunOnceEnumerableTests.cs" />
     <Compile Include="RunOnceEnumerableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
