--- a/Creou.OnlyRunOnce.Tests/Creou.OnlyRunOnce.Tests.csproj
+++ b/Creou.OnlyRunOnce.Tests/Creou.OnlyRunOnce.Tests.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="ConcurrentRunOnceEnumerableTests.cs" />
+    <Compile Include="CovarianceTests.cs" />
     <Compile Include="RunOnceEnumerableTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
